# Util_CheckBOM

./: BOM1.csv  BOM1.ods  BOM11.csv  BOM1_2.csv  Cargo.toml  README  src_temp.rs  temp.rs
release/: 3BOM  4BOM  77bomk.csv  77bomk.ods  77bomo.csv  BOM1.csv  BOM1_err1.csv  BOM2_err1.csv  BOM3.csv  BOMn1.csv  BOMn3.csv  BOMo1.csv  BOMo3.csv  BOMq1.csv  BOMq3.csv
src/: lib.rs  main.rs
tests/: BOM1.csv  integration_tests.rs
