[package]
name = "checkbom"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
#[[test]]
#name = "integration_test"
#path = "tests/integration_tests.rs"
